# Lesson_Project

./: .flake8  README.md  main.py  pyproject.toml
src/: Category.py  Lawn_Grass.py  Product.py  Smartphone.py  __init__.py  base_product.py  category.py  mixins.py  product.py
src/products/: __init__.py  lawn_grass.py  smartphone.py
tests/: test_base_product.py  test_category.py  test_main.py  test_mixins.py  test_product.py  test_products.py
